--- a/wiki/cs/Sketcher_CreatePolyline.html
+++ b/wiki/cs/Sketcher_CreatePolyline.html
@@ -68,7 +68,7 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span id="Pou.C5.BEit.C3.AD"></span><span class="mw-headline" id="Pou&#382;it&iacute;">Pou&#382;it&iacute;</span></h2>
-<p>See also: <a href="../Sketcher_Workbench.html#Drawing_aids" title="Sketcher Workbench">Drawing aids</a>.
+<p>Viz tak&eacute;: <a href="../Sketcher_Workbench.html#Drawing_aids" title="Sketcher Workbench">Pom&#367;cky pro kreslen&iacute;</a>.
 </p>
 <ol><li>There are several ways to invoke the tool:
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a></span> button.</li>
@@ -141,12 +141,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122134023
+Cached time: 20260122134226
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.156 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 391/1000000
 Post&#8208;expand include size: 27795/2097152 bytes
 Template argument size: 10566/2097152 bytes
@@ -157,19 +157,19 @@ Unstrip post&#8208;expand size: 2754/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.312      1 -total
- 47.79%   20.219      1 Template:Sketcher_Tools_navi/cs
- 18.01%    7.622      1 Template:GuiCommand
- 12.65%    5.354      1 Template:Userdocnavi/cs
- 12.01%    5.082      2 Template:Navigation_menu_2
-  5.97%    2.528      2 Template:Docnav
-  5.56%    2.353      8 Template:KEY
-  5.10%    2.160      2 Template:MenuCommand
-  4.85%    2.053      1 Template:Caption
-  3.12%    1.322      1 Template:Button
+100.00%   21.393      1 -total
+ 30.74%    6.576      1 Template:Sketcher_Tools_navi/cs
+ 20.85%    4.461      1 Template:GuiCommand
+ 20.02%    4.282      2 Template:Navigation_menu_2
+ 16.65%    3.562      1 Template:Userdocnavi/cs
+  9.32%    1.993      2 Template:Docnav
+  6.68%    1.430      8 Template:KEY
+  6.64%    1.420      1 Template:Caption
+  5.77%    1.235      2 Template:MenuCommand
+  5.68%    1.215      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122134023 and revision id 1742375. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122134226 and revision id 1742377. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
