--- a/wiki/it/Macro_Snip.html
+++ b/wiki/it/Macro_Snip.html
@@ -86,11 +86,8 @@ Su Linux: gnone-screenshot utility<br>
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<p>La macro pu&ograve; acquisire schermate o utilizzare schermate esistenti che sono gi&agrave; state copiate negli Appunti del sistema. Per bypassare l'immagine gi&agrave; presente negli Appunti premere il tasto Maiusc mentre si richiama la macro. Per utilizzare la macro per acquisire lo screenshot, regolare le dimensioni e il posizionamento della finestra di dialogo che viene visualizzata, quindi fare clic su OK. Facendo clic su OK, la macro tenta di acquisire uno screenshot dell'area dello schermo coperta dalla finestra di dialogo. La finestra di dialogo &egrave; semitrasparente, quindi si possono vedere i contenuti sottostanti.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Snip-Screenshot1.png&amp;filetimestamp=20190804000200&amp;.html" class="mw-file-description"><img src="../File/Snip-Screenshot1.png" decoding="async" width="600" height="331" class="mw-file-element" data-file-width="1631" data-file-height="899"></a></span>
+<p>La macro pu&ograve; acquisire schermate oppure utilizzare schermate esistenti gi&agrave; copiate negli appunti di sistema. Per ignorare l'immagine gi&agrave; presente negli appunti, premere il tasto <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> mentre si richiama la macro. Per utilizzare la macro per acquisire la schermata, regolare le dimensioni e la posizione della finestra di dialogo che si apre, quindi fare clic su <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>. Facendo clic su <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>, la macro tenter&agrave; di acquisire una schermata dell'area dello schermo coperta dalla finestra di dialogo. La finestra di dialogo stessa &egrave; semitrasparente, quindi &egrave; possibile vederne il contenuto sottostante.
+</p><p><span typeof="mw:File"><a href="../index.php?title=Snip-Screenshot1.png&amp;filetimestamp=20190804000200&amp;.html" class="mw-file-description"><img src="../File/Snip-Screenshot1.png" decoding="async" width="600" height="331" class="mw-file-element" data-file-width="1631" data-file-height="899"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Notice how the dialog is semi-transparent. Only the screen contents below the dialog will be captured.</p>
@@ -561,15 +558,15 @@ if not userCanceled:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122144258
+Cached time: 20260122144406
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.057 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 274/1000000
-Post&#8208;expand include size: 7462/2097152 bytes
-Template argument size: 18955/2097152 bytes
+CPU time usage: 0.056 seconds
+Real time usage: 0.080 seconds
+Preprocessor visited node count: 294/1000000
+Post&#8208;expand include size: 8427/2097152 bytes
+Template argument size: 18964/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -577,18 +574,18 @@ Unstrip post&#8208;expand size: 18824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.463      1 -total
- 34.28%   11.470      2 Template:Caption
- 16.81%    5.626      1 Template:MenuCommand
- 14.85%    4.970      1 Template:Macro/it
- 11.93%    3.992      1 Template:MacroCode
-  7.85%    2.626     13 Template:Incode
-  5.48%    1.834      1 Template:Button
-  3.73%    1.247      6 Template:KEY
-  3.38%    1.131      1 Template:FileName
+100.00%   18.522      1 -total
+ 23.23%    4.302      1 Template:MacroCode
+ 20.20%    3.742      1 Template:Macro/it
+ 10.86%    2.011      1 Template:MenuCommand
+  9.25%    1.713      2 Template:Caption
+  8.77%    1.625      7 Template:KEY
+  8.47%    1.568     13 Template:Incode
+  6.72%    1.244      3 Template:Button
+  5.31%    0.983      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144258 and revision id 1742402. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144406 and revision id 1742404. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
