--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -32,44 +32,44 @@
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
-<th style="width: 33%;">Name
+<th style="width: 33%;">N&aacute;zev
 </th>
-<th style="width: 66%;">Description
+<th style="width: 66%;">Popis
 </th></tr>
 <tr>
-<td><b>Show section 'Advanced Solver Controls'</b>
+<td><b>Zobrazit sekci 'Roz&scaron;&iacute;&#345;en&eacute; ovl&aacute;d&aacute;n&iacute; &#345;e&scaron;itele'</b>
 </td>
-<td>If checked, the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">sketcher dialog</a> will show the section <i>Advanced Solver Controls</i>  to adjust solver settings.
+<td>Pokud je za&scaron;krtnuto, dialogov&eacute; okno <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">sketcheru</a> zobraz&iacute; sekci <i>Pokro&#269;il&eacute; ovl&aacute;dac&iacute; prvky &#345;e&scaron;itele</i> pro &uacute;pravy nastaven&iacute; &#345;e&scaron;itele.
 </td></tr>
 <tr>
-<td><b>Improve solving while dragging</b>
+<td><b>Zlep&scaron;it &#345;e&scaron;en&iacute; p&#345;i ta&#382;en&iacute;</b>
 </td>
-<td>If checked, a special solver algorithm will be used while dragging sketch elements. This avoids that the sketch flips around while dragging. It is an improvement for most cases, however for complex sketches this option can increase the time to solve the sketch.
+<td>Pokud je tato mo&#382;nost za&scaron;krtnuta, p&#345;i p&#345;etahov&aacute;n&iacute; prvk&#367; n&aacute;&#269;rtu bude pou&#382;it speci&aacute;ln&iacute; algoritmus &#345;e&scaron;itele. T&iacute;m se zabr&aacute;n&iacute; ot&aacute;&#269;en&iacute; n&aacute;&#269;rtu p&#345;i p&#345;etahov&aacute;n&iacute;. Ve v&#283;t&scaron;in&#283; p&#345;&iacute;pad&#367; se jedn&aacute; o vylep&scaron;en&iacute;, u slo&#382;it&yacute;ch n&aacute;&#269;rt&#367; v&scaron;ak tato mo&#382;nost m&#367;&#382;e prodlou&#382;it dobu pot&#345;ebnou k vy&#345;e&scaron;en&iacute; n&aacute;&#269;rtu.
 </td></tr>
 <tr>
-<td><b>Auto remove redundant constraints</b>
+<td><b>Automaticky odstra&#328;ovat redundantn&iacute;</b>
 </td>
-<td>If checked, new constraints that are redundant are automatically removed.
+<td>Pokud je za&scaron;krtnuto, automaticky se odstran&iacute; nov&eacute; nadbyte&#269;n&eacute; vazby.
 </td></tr>
 <tr>
-<td><b>Esc key can leave sketch edit mode</b>
+<td><b>Esc m&#367;&#382;e vypnout re&#382;im &uacute;prav n&aacute;&#269;rtu.</b>
 </td>
-<td>If checked, the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> key can trigger exiting sketch edit mode. The option to disable this may be useful for users who are used to pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> as part of their workflow in other CAD solutions but don't necessarily want to exit a sketch.
+<td>Pokud je za&scaron;krtnuto, kl&aacute;vesa <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> m&#367;&#382;e spustit ukon&#269;en&iacute; re&#382;imu &uacute;prav n&aacute;&#269;rtu. Mo&#382;nost tuto funkci deaktivovat m&#367;&#382;e b&yacute;t u&#382;ite&#269;n&aacute; pro u&#382;ivatele, kte&#345;&iacute; jsou zvykl&iacute; stisknout kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> jako sou&#269;&aacute;st sv&eacute;ho pracovn&iacute;ho postupu v jin&yacute;ch CAD &#345;e&scaron;en&iacute;ch, ale necht&#283;j&iacute; nutn&#283; ukon&#269;it n&aacute;&#269;rt.
 </td></tr>
 <tr>
-<td><b>Disable shading in edit mode</b> Only available in version 1.0.
+<td><b>Zak&aacute;zat st&iacute;nov&aacute;n&iacute; v re&#382;imu &uacute;prav</b> K dispozici pouze ve verzi 1.0.
 </td>
-<td>If checked, the shaded view is disabled when entering sketch edit mode.
+<td>Pokud je za&scaron;krtnuto, je p&#345;i vstupu do re&#382;imu &uacute;prav n&aacute;&#269;rtu st&iacute;novan&yacute; pohled deaktivov&aacute;n.
 </td></tr>
 <tr>
-<td><b>Notify about automatic constraint substitutions</b>
+<td><b>Upozornit na automatickou n&aacute;hradu vazeb</b>
 </td>
-<td>If checked, you will be informed with a dialog about constraint substitutions. For example if the endpoints of two arcs are connected with the <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">coincident constraint</a> and you reconnect the arcs using the <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">tangent constraint</a>, the coincidence constraint will be substituted by the tangent constraint and you will get a popup dialog telling you this.
+<td>Pokud je za&scaron;krtnuto, budete informov&aacute;ni dialogov&yacute;m oknem o nahrazen&iacute; vazeb. Nap&#345;&iacute;klad pokud jsou koncov&eacute; body dvou oblouk&#367; spojeny pomoc&iacute; <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazby shodnosti</a> a vy oblouky znovu spoj&iacute;te pomoc&iacute; <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">vazby te&#269;nosti</a>, bude vazba shodnosti nahrazena vazbou te&#269;nosti a zobraz&iacute; se v&aacute;m vyskakovac&iacute; dialogov&eacute; okno s touto informac&iacute;.
 </td></tr>
 <tr>
-<td><b>Unify coincident and point-on-object constraints</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
+<td><b>Sjednotit toto&#382;nost a bod na objektu</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
-<td>If checked, the <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">coincident constraint tool</a> and <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">point-on-object constraint tool</a> are unified in a <a href="../Sketcher_ConstrainCoincidentUnified.html" title="Sketcher ConstrainCoincidentUnified">single tool</a>.
+<td>Pokud je za&scaron;krtnuto, n&aacute;stroje <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazba shodnosti</a> a <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">vazba bodu na objektu</a> jsou sjednoceny do <a href="../Sketcher_ConstrainCoincidentUnified.html" title="Sketcher ConstrainCoincidentUnified">jedin&eacute;ho n&aacute;stroje</a>.
 <p><i>After changing this preference you must restart FreeCAD.</i>
 </p>
 </td></tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122142713
+Cached time: 20260122144417
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.140 seconds
-Real time usage: 0.215 seconds
+CPU time usage: 0.144 seconds
+Real time usage: 0.230 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 29991/2097152 bytes
-Template argument size: 11627/2097152 bytes
+Post&#8208;expand include size: 30011/2097152 bytes
+Template argument size: 11647/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.880      1 -total
- 15.00%    8.232      1 Template:Sketcher_Tools_navi/cs
- 10.20%    5.599      3 Template:PropertyView
-  9.99%    5.481     96 Template:MenuCommand
-  8.48%    4.656      2 Template:Navigation_menu_2
-  8.21%    4.503      1 Template:Userdocnavi/cs
-  6.63%    3.639      2 Template:Docnav
-  5.92%    3.247      1 Template:Value
-  5.60%    3.075      1 Template:VersionMinus
-  5.50%    3.016     19 Template:Version
+100.00%   61.428      1 -total
+ 22.69%   13.938      1 Template:Sketcher_Tools_navi/cs
+ 10.20%    6.263      3 Template:PropertyView
+  8.95%    5.495      2 Template:Navigation_menu_2
+  8.59%    5.278      1 Template:Userdocnavi/cs
+  8.30%    5.101     96 Template:MenuCommand
+  7.60%    4.671      1 Template:Value
+  5.03%    3.087      3 Template:Variable
+  5.00%    3.073      2 Template:Docnav
+  4.18%    2.569     19 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142713 and revision id 1742400. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122144416 and revision id 1742406. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
