--- a/wiki/it/Macro_Snip.html
+++ b/wiki/it/Macro_Snip.html
@@ -94,10 +94,8 @@ Su Linux: gnone-screenshot utility<br>
 </p><p><span typeof="mw:File"><a href="../index.php?title=Snip-Screenshot2.png&amp;filetimestamp=20190804000814&amp;.html" class="mw-file-description"><img src="../File/Snip-Screenshot2.png" decoding="async" width="600" height="389" class="mw-file-element" data-file-width="1149" data-file-height="744"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Questa &egrave; la finestra di dialogo per aprire il file che appare automaticamente dopo aver acquisito lo screenshot. L'immagine pu&ograve; essere trascinata e rilasciata sul forum oppure aperta per un'ulteriore elaborazione nell'applicazione predefinita del sistema per l'apertura dei file PNG. In alternativa, si pu&ograve; fare clic con il pulsante destro del mouse sull'immagine e selezionare <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Apri con..</span> per utilizzare un'altra applicazione a scelta.</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>If the macro doesn't work on your system to capture screenshots it can still be useful for screenshots you have captured using other tools. Simply copy the screenshot to the clipboard, then run the macro. It will create the temporary file and open the file's directory in an open file dialog for you. Some other tools for taking screenshots:
+<p>Se la macro per catturare screenshot non funziona sul sistema, pu&ograve; comunque essere utile per gli screenshot che sono stati catturati con altri strumenti. Copiare semplicemente lo screenshot negli appunti, quindi eseguire la macro. Verr&agrave; creato un file temporaneo e verr&agrave; aperta la cartella del file in una finestra di dialogo "Apri file". Altri strumenti per catturare screenshot:
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd>Windows: Windows Key + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">S</span></dd>
 <dd>MacOS: <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Command</span> + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">4</span></dd>
@@ -551,13 +549,13 @@ if not userCanceled:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122144646
+Cached time: 20260122144757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 291/1000000
+CPU time usage: 0.054 seconds
+Real time usage: 0.082 seconds
+Preprocessor visited node count: 290/1000000
 Post&#8208;expand include size: 8696/2097152 bytes
 Template argument size: 19098/2097152 bytes
 Highest expansion depth: 6/100
@@ -567,18 +565,18 @@ Unstrip post&#8208;expand size: 18824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.305      1 -total
- 16.73%    3.898      1 Template:Macro/it
- 15.89%    3.703      1 Template:MacroCode
- 13.62%    3.173      7 Template:KEY
- 10.93%    2.547      3 Template:Button
-  9.28%    2.162     13 Template:Incode
-  8.89%    2.072      2 Template:Caption
-  8.57%    1.997      1 Template:MenuCommand
-  7.77%    1.811      1 Template:FileName
+100.00%   15.105      1 -total
+ 20.26%    3.061      1 Template:Macro/it
+ 13.63%    2.059      1 Template:MacroCode
+ 11.50%    1.737      2 Template:Caption
+ 10.31%    1.557      7 Template:KEY
+  9.83%    1.484     13 Template:Incode
+  8.76%    1.324      3 Template:Button
+  8.35%    1.261      1 Template:MenuCommand
+  7.75%    1.170      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144646 and revision id 1742414. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144757 and revision id 1742416. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
